--- a/SEBookStoreAngular.AngularApp/src/app/components/base/message-box/message-box.component.html
+++ b/SEBookStoreAngular.AngularApp/src/app/components/base/message-box/message-box.component.html
@@ -1,3 +1,4 @@
+<!--@CodeCopy-->
 <div class="modal-header d-flex justify-content-between align-items-center">
     <h5 class="modal-title">{{ title }}</h5>
     <button type="button" 
